src/test/resources/fixtures/security/extract.php
<?php

    <error descr="Please provide second parameter to clearly state intended behaviour.">extract</error> ([]);

    extract([], EXTR_OVERWRITE);